- #11 build scripts and systemctl units - Testing rabbitmq server connections

--- a/aquapone.config.json
+++ b/aquapone.config.json
@@ -11,5 +11,9 @@
         "relays": {
             "pump": "35"
         }
+    },
+    "rabbit":{
+        "server":"192.168.1.102:30072",
+        "login":"guest@guest"
     }
 }
