- #14 schedule mode now driven from configuration files, but only for pulses

--- a/aquapone.config.json
+++ b/aquapone.config.json
@@ -2,7 +2,8 @@
     "appname": "Aquaponics control centrale",
     "schedule": {
         "config": 2,
-        "tickat": "13:16",
-        "pulsegap": 600
+        "tickat": "20:30",
+        "pulsegap": 10,
+        "interval": 30
     }
 }
